--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+jwt:
+  secret: Zh28h8kvun73MrRyY82fwR3FXMvBUTpd
+  expiration: 3600000 # 1 Hour
